feat(messenger): add chat related apis
