# src/modules/messenger/chat/participants/dto/create-participant.dto.ts
@@ -1,0 +1,16 @@
+import { IsEnum, IsNotEmpty, IsOptional, IsUUID } from 'class-validator';
+import { ParticipantRole } from '../entities/participant.entity';
+
+export class CreateParticipantDto {
+  @IsUUID()
+  @IsNotEmpty()
+  userId: string;
+
+  @IsUUID()
+  @IsNotEmpty()
+  conversationId: string;
+
+  @IsOptional()
+  @IsEnum(ParticipantRole)
+  role?: ParticipantRole;
+}
