# src/modules/messenger/chat/participants/participants.controller.ts
@@ -1,0 +1,27 @@
+import { Body, Controller, Get, Param, Patch, Post } from '@nestjs/common';
+import { CreateParticipantDto } from './dto/create-participant.dto';
+import { UpdateParticipantDto } from './dto/update-participant.dto';
+import { ParticipantsService } from './participants.service';
+
+@Controller('conversations/:id/members')
+export class ParticipantsController {
+  constructor(private readonly participantsService: ParticipantsService) {}
+
+  @Post()
+  create(@Body() createParticipantDto: CreateParticipantDto) {
+    return this.participantsService.create(createParticipantDto);
+  }
+
+  @Get()
+  findAll() {
+    return this.participantsService.findAll();
+  }
+
+  @Patch(':id')
+  update(
+    @Param('id') id: string,
+    @Body() updateParticipantDto: UpdateParticipantDto,
+  ) {
+    return this.participantsService.update(id, updateParticipantDto);
+  }
+}
